erDiagram
    CUSTOMERS ||--o{ ORDERS : places
    ORDERS ||--o{ BARCODES : contains

    CUSTOMERS {
        int id PK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar phone
        varchar address
        datetime created_at
    }
    ORDERS {
        int id PK
        int customer_id FK "indexed"
        datetime order_date
        varchar status
        decimal total
    }
    BARCODES {
        int id PK
        varchar barcode UK
        int order_id FK "nullable, indexed"
        decimal price
    }
